Add styles to awesome-books and also fixed linter errors

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
       
     </div>
   </div>
+  <hr>
   <div class="new-data">
+    <h2>Add a New Book</h2>
     <input type="text" class="new-title" placeholder="Title">
     <input type="text" class="new-author" placeholder="Author">
     <!-- <button class="add" onclick="addBooks()">Add</button> -->
-    <button class="add">Add</button>
+    <button class="add" type="submit">Add</button>
 
   </div>
   
