--- a/index.html
+++ b/index.html
@@ -9,20 +9,30 @@
 </head>
 <body>
   <div class="container-out">
-    <h1 class="awesome">Awesome books</h1>
-    <div class="container">
-      
+    <nav class="nav">
+      <ul class="lists">
+        <li class="awesome-books"><a href="">Awesome Books</a></li>
+        <li class="list border-r"><a href="">List</a></li>
+        <li class="list border-r"><a href="">Add Book</a></li>
+        <li class="list"><a href="">Contact</a></li>
+      </ul>
+    </nav>
+    <div class="date"></div>
+    <h1 class="heading">All Awesome books</h1>
+    <div class="container"> 
     </div>
+    <hr>
+    <div class="new-data">
+      <h2>Add a New Book</h2>
+      <input type="text" class="new-title" placeholder="Title">
+      <input type="text" class="new-author" placeholder="Author">
+      <button class="add" type="submit">Add</button>
+    </div>
+    <footer class="footer">
+      <p class="copyright">Copyright<span>...</span></p>
+    </footer>
   </div>
-  <hr>
-  <div class="new-data">
-    <h2>Add a New Book</h2>
-    <input type="text" class="new-title" placeholder="Title">
-    <input type="text" class="new-author" placeholder="Author">
-    <!-- <button class="add" onclick="addBooks()">Add</button> -->
-    <button class="add" type="submit">Add</button>
-
-  </div>
+ 
   
 <script src="script.js"></script>
 </body>
