--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container-out">
-    <h1 class="awesome">Awesome books</h1>
+    <h1 class="awesome">Awesome books+</h1>
     <div class="container">
       
     </div>
